# loopy

./: .editorconfig  .gitignore  CHANGELOG.md  DEVELOPMENT.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  pua-rules.md  setup.mjs  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
mcp-server/: package-lock.json  package.json
mcp-server/src/: index.ts  logger.ts  types.ts  ws-bridge.ts
scripts/: publish.mjs  release.mjs
src/: App.vue  main.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cursor_usage.rs  lib.rs  main.rs  ws_server.rs
src/components/: ChatHistory.vue  InputToolbar.vue  Lightbox.vue  TabBar.vue  UsageBadge.vue  UsageDrawer.vue
src/composables/: useWindowLayout.ts
src/stores/: sessions.ts  usage.ts
src/styles/: index.css
src/utils/: helpers.ts  storage.ts
