[package]
name = "loopy"
version = "0.1.0"
description = "Loopy - AI feedback loop with PUA motivation engine"
authors = ["you"]
edition = "2021"

[lib]
name = "loopy_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "net", "sync", "macros"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
socket2 = { version = "0.5", features = ["all"] }
